# kindle-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
app/: config.py  google_client.py  main.py  mbta.py  models.py  render.py  service.py  weather.py
scripts/: discover_mbta_stop.py  google_auth.py  kindle-refresh.sh
tests/: test_dashboard_sources.py
