[project]
name = "kindle-dashboard"
version = "0.1.0"
description = "A Dockerized Flask backend that renders a Kindle-friendly daily dashboard PNG."
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "gunicorn>=22.0.0",
    "pillow>=10.3.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

